<resources>
    <string name="app_name">GithubUser</string>
    <string name="add_favorite_user_on_profile_page">Add favorite user on profile page</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="company">MindorksOpenSource</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete">Delete</string>
    <string name="dont_have_favorite">You don\'t have a favorite user yet</string>
    <string name="do_you_want_to_remove">Do you want to remove %1$s</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="failed_to_connect_server">Failed to connect to the server</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_add">%1$s add to favorite</string>
    <string name="favorites_remove">%1$s remove from favorite</string>
    <string name="favorite_user">Users Favorite</string>
    <string name="field_required">Field cannot be empty</string>
    <string name="find_someone_here">Find someone here</string>
    <string name="find_someone_on_github">Find someone on Github</string>
    <string name="from_favorites">from favorites ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="let_s_find_out">Let\'s Find Out</string>
    <string name="location">New Delhi, India</string>
    <string name="message_search">Find your friend or your coworker</string>
    <string name="message_not_found">Make sure the username is correct</string>
    <string name="name">Sharukh Khan</string>
    <string name="no_data">~</string>
    <string name="no_followers">No Followers</string>
    <string name="no_following">No Following</string>
    <string name="number">100000</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="repository">Repository</string>
    <string name="settings">Settings</string>
    <string name="something_wrong">Something wrong</string>
    <string name="title_not_found">Users not found</string>
    <string name="title_search">Let\'s find someone</string>
    <string name="try_again">Try Again</string>
    <string name="warning">warning</string>
</resources>
