<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp21"
    android:paddingEnd="@dimen/dp21">

    <ImageView
        android:id="@+id/iv_warning"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp89"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp47"
        android:contentDescription="@string/app_name"
        android:src="@drawable/warning" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_warning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp5"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/warning"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp27"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp13"
        tools:text="@string/do_you_want_to_remove" />

    <TextView
        android:id="@+id/tv_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/from_favorites"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message2"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp17"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp38"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/background_button_positive"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp38"
            android:layout_marginStart="@dimen/dp10"
            android:layout_weight="1"
            android:background="@drawable/background_button_negative"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />
    </LinearLayout>
</RelativeLayout>