<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp28"
    android:paddingEnd="@dimen/dp28"
    android:paddingBottom="@dimen/dp23"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp24"
        android:layout_height="@dimen/dp24"
        android:layout_marginTop="@dimen/dp17"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_server"
        android:layout_width="@dimen/dp250"
        android:layout_height="@dimen/dp156"
        android:layout_marginTop="@dimen/dp18"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_server_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/something_wrong"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_server"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/failed_to_connect_server"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_try_again"
        android:layout_width="@dimen/dp185"
        android:layout_height="@dimen/dp38"
        android:layout_marginTop="@dimen/dp28"
        android:background="@drawable/background_button_primary"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>