<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activity.SplashScreen">

    <ImageView
        android:id="@+id/iv_github"
        android:layout_width="@dimen/height_100"
        android:layout_height="@dimen/width_100"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.420"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_36"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_github"
        android:layout_marginTop="@dimen/margin_16"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14"
        android:text="@string/find_someone_on_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/margin_8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/radius_15"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/text_13"
        android:text="@string/let_s_find_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/margin_66"
        android:paddingStart="@dimen/padding_15"
        android:paddingEnd="@dimen/padding_15"
        android:paddingTop="@dimen/padding_12"
        android:paddingBottom="@dimen/padding_12"/>
</androidx.constraintlayout.widget.ConstraintLayout>