<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_21">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_250"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_200"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/width_100"
                    android:layout_height="@dimen/height_100"
                    android:src="@drawable/im_user_6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/container_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@id/iv_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_profile"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/container_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_repository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="@dimen/text_18"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/number"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/tv_label_repository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="@dimen/text_14"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/repository"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="@dimen/text_18"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/number"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/tv_label_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="@dimen/text_14"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/followers"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="@dimen/text_18"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/number"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/tv_label_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="@dimen/text_14"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/following"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/black"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/black"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/black"
                    android:text="@string/company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_username"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/black"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_company"
                    android:layout_marginTop="3dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tb_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tab"/>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vw_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_profile"
        android:layout_width="@dimen/width_56"
        android:layout_height="@dimen/height_56"
        app:borderWidth="@dimen/zero"
        android:contentDescription="@string/name"
        android:src="@drawable/ic_heart"
        android:layout_margin="@dimen/margin_20"
        android:layout_gravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>